Fixed X button. Need to do delete list modal being too big and song card shape

--- a/src/App.css
+++ b/src/App.css
@@ -131,6 +131,7 @@ body {
 }
 
 .list-card-button {
+  margin-left: auto;
   float:right;
   font-size:18pt;
 }
